--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,14 @@
     // Use this environment variable if you need to bind mount your local source code into a new container.
     "remoteEnv": {
         "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "github.vscode-github-actions",
+                "esbenp.prettier-vscode"
+            ]
+        }
     }
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
