--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 permissions:
   packages: write
+  contents: read
 
 jobs:
   build-and-test:
@@ -22,7 +23,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Image
-        uses: docker/build-push-action@v4.2.1
+        uses: docker/build-push-action@v5
         with:
           context: .
           load: true
@@ -47,7 +48,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -63,7 +64,7 @@ jobs:
             type=sha
 
       - name: Build Image
-        uses: docker/build-push-action@v4.2.1
+        uses: docker/build-push-action@v5
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
