--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,13 +5,9 @@
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     "image": "mcr.microsoft.com/devcontainers/base:bullseye",
     "features": {
-        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-            "version": "latest",
-            "enableNonRootDocker": "true",
-            "moby": "true"
-        },
         "ghcr.io/devcontainers/features/github-cli:1": {},
-        "ghcr.io/dhoeric/features/act:1": {}
+        "ghcr.io/dhoeric/features/act:1": {},
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
     },
     // Use this environment variable if you need to bind mount your local source code into a new container.
     "remoteEnv": {
