--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Image
+      - name: Build Base
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -37,6 +37,16 @@ jobs:
       - name: Test
         run: |
           docker run -v "$(pwd)"/tests/demo:/demo test bash -c "cd /demo && make"
+
+      - name: Build MLIR
+        uses: docker/build-push-action@v5
+        with:
+          file: Dockerfile.mlir
+          build-args: |
+            BASE_IMG=ghcr.io/${{ github.repository }}:base
+          push: test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     runs-on: ubuntu-latest
