Fix base_img arg

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           context: .
           load: true
-          tags: test
+          tags: base-test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -43,7 +43,7 @@ jobs:
         with:
           file: Dockerfile.mlir
           build-args: |
-            BASE_IMG=ghcr.io/${{ github.repository }}:base
+            BASE_IMG=base-test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
