--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          # since we're using a local registry
+          driver-opts: network=host
 
       - name: Build Base
         uses: docker/build-push-action@v5
